Wed Aug 22 22:23:14 2001  Christopher Faylor <cgf@cygnus.com>

	* dtable.cc (dtable::dup2): Allow extension of fd table by dup2.
	* syscalls.cc: Minor code cleanup.
	(fpathconf): Check for bad fd before doing anything else.
	* termios.cc (tcsetattr): Don't convert to new termios if bad fd.
	(tcgetattr): Minor debugging tweak.

Wed Aug 22 23:41:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_inet_ntoa): Rearrange previous patch to use
	thread local buffer space when compiled thread safe.
	(cygwin_getprotobyname): Ditto.
	(cygwin_getprotobynumber): Ditto.
	(cygwin_getservbyname): Ditto.
	(cygwin_getservbyport): Ditto.
	(cygwin_gethostbyname): Ditto.
	(cygwin_gethostbyaddr): Ditto. Move near to cygwin_gethostbyname.
	* thread.h (struct _winsup_t): Add pointers for above used buffer space.
	* passwd.cc (getpwduid): Remove initializing passwd.
	(setpwent): Ditto.
	(endpwent): Ditto.
	(setpassent): Ditto.

Wed Aug 22 13:41:09 2001  Christopher Faylor <cgf@cygnus.com>

	* smallprint.c (console_printf): New function.
	* dcrt0.cc (dll_crt0_1): Use console_printf for debugging output.
	* debug.cc (debug_mark_closed): New function.
	(close_handle): Use debug_mark_closed.
	* debug.h: Declare new functions.
	* dtable.cc (dtable::build_fhandler): Remove unneeded extern.
	* spawn.cc: Cosmetic changes.
	* winsup.h: Define NO_COPY for C files, too.  Declare a global.

Wed Aug 22 17:31:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (free_char_list): New static function.
	(dup_char_list): Ditto.
	(free_protoent_ptr): Ditto.
	(dup_protoent_ptr): Ditto.
	(free_servent_ptr): Ditto.
	(dup_servent_ptr): Ditto.
	(free_hostent_ptr): Ditto.
	(dup_hostent_ptr): Ditto.
	(cygwin_inet_ntoa): Use local static buffer to allow propagating of
	the result to child processes.
	(cygwin_getprotobyname): Ditto.
	(cygwin_getprotobynumber): Ditto.
	(cygwin_getservbyname): Ditto.
	(cygwin_getservbyport): Ditto.
	(cygwin_gethostbyname): Ditto.
	(cygwin_gethostbyaddr): Ditto.
